metade do review

--- a/Exercicios/ex01/ex01.html
+++ b/Exercicios/ex01/ex01.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bora denovo</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Retorno aos estudos!</h1>
+    <header>
+        <h1>Retorno aos estudos!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi modi mollitia magni possimus harum excepturi ducimus laborum doloribus, velit quas ea blanditiis voluptas nulla at sit impedit suscipit ex!</p>
+    </header>
+
+    <p>Puramente HTML e CSS</p>
+    <div>
+        <a href="https://www.instagram.com/omatheus_alvesz/" target="_blank">Insta</a>
+    </div>
     <form action="#" method="post">
         <div>
-            <label for="name">Nome: </label>
-            <input type="text" id="name">
-        </div>
-        <div>
-            <label for="mail">E-mail: </label>
-            <input type="email" id="mail">
-        </div>
-        <div>
-            <label for="msg">Mensagem:</label>
-            <textarea placeholder="Sua mensagem aqui" name="msg" id="msg" cols="30" rows="10"></textarea>
+            <label for="msg"></label>
+            <textarea placeholder="O que achou do meu site?" name="msg" id="msg" cols="30" rows="2"></textarea>
         </div>
         <div class="input">
             <button type="submit">Enviar sua mensagem</button>
