--- a/Exercicios/ex01/ex01.html
+++ b/Exercicios/ex01/ex01.html
@@ -14,14 +14,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi modi mollitia magni possimus harum excepturi ducimus laborum doloribus, velit quas ea blanditiis voluptas nulla at sit impedit suscipit ex!</p>
     </header>
 
-    <p>Puramente HTML e CSS</p>
+    <h2>Veja o buxa abaixo</h2>
+    <div>
+        <img id="buxa" src="images/buxa abaixo.webp" alt="buxa-ladrão">
+    </div>
     <div>
         <a href="https://www.instagram.com/omatheus_alvesz/" target="_blank">Insta</a>
     </div>
     <form action="#" method="post">
         <div>
             <label for="msg"></label>
-            <textarea placeholder="O que achou do meu site?" name="msg" id="msg" cols="30" rows="2"></textarea>
+            <textarea placeholder="O que achou?" name="msg" id="msg" cols="20" rows="1"></textarea>
         </div>
         <div class="input">
             <button type="submit">Enviar sua mensagem</button>
