--- a/Exercicios/ex01/ex01.html
+++ b/Exercicios/ex01/ex01.html
@@ -10,25 +10,22 @@
 </head>
 <body>
     <header>
-        <h1>Retorno aos estudos!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi modi mollitia magni possimus harum excepturi ducimus laborum doloribus, velit quas ea blanditiis voluptas nulla at sit impedit suscipit ex!</p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Socias</a>
+        </nav>
     </header>
-
-    <h2>Veja o buxa abaixo</h2>
-    <div>
-        <img id="buxa" src="images/buxa abaixo.webp" alt="buxa-ladrão">
-    </div>
-    <div>
-        <a href="https://www.instagram.com/omatheus_alvesz/" target="_blank">Insta</a>
-    </div>
-    <form action="#" method="post">
-        <div>
-            <label for="msg"></label>
-            <textarea placeholder="O que achou?" name="msg" id="msg" cols="20" rows="1"></textarea>
-        </div>
-        <div class="input">
-            <button type="submit">Enviar sua mensagem</button>
-        </div>
-    </form>
+<main>
+    <article>
+            <h2>Veja o buxa abaixo</h2>
+            <div>
+                <img id="buxa" src="images/buxa abaixo.webp" alt="buxa-ladrão">
+            </div>
+    </article>
+</main>
+<footer>
+    <p>Enquanto isso o garoto Okkotsu só queria a quimera tetuda</p>
+    <a href="https://www.instagram.com/omatheus_alvesz/" target="_blank">Insta</a>
+</footer>
 </body>
 </html>
